<resources>
    <!-- Textos Generales -->
    <string name="app_name">SysTurno Móvil</string>
    <string name="inicio_btn_preferencias">Preferencias</string>
    <string name="menu_btn_cerrarSesion">Cerrar Sesión</string>
    <string name="app_version"></string>

    <!-- Iniciar Sesión -->
    <string name="iniciar_sesion_Titulo">SysTurno</string>
    <string name="iniciar_sesion_tv_ci">C.I.:</string>
    <string name="iniciar_sesion_btn_iniciarSesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_btn_nuevoRegistro">Crear Usuario</string>
    <string name="iniciar_sesion_btn_salir">Salir</string>
    <string name="iniciar_sesion_tv_contrasenia">Contraseña:</string>

    <!-- Menú Principal -->
    <string name="menu_principal_tv_titulo">Hola, %1$s %2$s</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_preferencias">Preferencias</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
