<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".IniciarSesion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cntrlyt_contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/iniciar_sesion_tv_ci"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/et_InicioCiUsuario"
            app:layout_constraintEnd_toStartOf="@+id/et_InicioCiUsuario"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <EditText
            android:id="@+id/et_InicioCiUsuario"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:hint="12345678"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/space" />

        <EditText
            android:id="@+id/et_InicioContrasenia"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="...."
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_InicioCiUsuario" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.3"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#A7FFEB"
            android:onClick="iniciarSesion"
            android:text="@string/iniciar_sesion_btn_iniciarSesion"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_InicioContrasenia" />

        <Button
            android:id="@+id/btn_InicioNuevo_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:width="160sp"
            android:background="@color/colorMenuBtnReservar"
            android:onClick="irARegistro"
            android:text="@string/iniciar_sesion_btn_nuevoRegistro"
            android:textColor="@color/colorTextoBlanco"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
            app:layout_constraintWidth_percent="0.3" />

        <TextView
            android:id="@+id/tv_titulo_inicio"
            android:layout_width="317dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/iniciar_sesion_Titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/design_default_color_primary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/iniciar_sesion_tv_contrasenia"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintBottom_toBottomOf="@+id/et_InicioContrasenia"
            app:layout_constraintEnd_toStartOf="@+id/et_InicioContrasenia"
            app:layout_constraintTop_toTopOf="@+id/et_InicioContrasenia" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_inicio" />

        <Button
            android:id="@+id/btn_salir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:width="160sp"
            android:background="@color/colorMenuBtnCancelar"
            android:onClick="salir"
            android:text="@string/iniciar_sesion_btn_salir"
            android:textColor="@color/colorTextoBlanco"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_ingresar"
            app:layout_constraintWidth_percent="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>